--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div>
-        <img src="assets/image/banner.png" alt="banner image" width="100%">
+        <img src="![banner](https://github.com/Roopagaselvi/web-application/assets/138562404/7da4cffa-da4f-4565-8c02-95483be50ee9)" alt="banner image" width="100%">
     </div>
    
 </body>
