--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div>
-         <img src="https://t3.ftcdn.net/jpg/02/96/61/94/360_F_296619471_iEGweTy9VsokHtbCJsVmyez0d2rocmmA.jpg" alt="banner image" width="100%">
+         <img src="https://t3.ftcdn.net/jpg/02/96/61/94/360_F_296619471_iEGweTy9VsokHtbCJsVmyez0d2rocmmA.JPG" alt="banner image" width="100%">
     </div>
    
 </body>
