--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div>
-         <img src="assets/image/logo.JPG" alt="banner image" width="100%">
+         <img src="./assets/image/logo.JPG" alt="banner image" width="100%">
     </div>
    
 </body>
